WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47818
Fix style of UnicodeWinCE
https://bugs.webkit.org/show_bug.cgi?id=47818
Summary
Fix style of UnicodeWinCE
Patrick R. Gansterer
Reported
2010-10-18 06:56:06 PDT
Fix the style of UnicodeWinCE, so further patches are easier to review.
Attachments
Patch
(14.02 KB, patch)
2010-10-18 07:13 PDT
,
Patrick R. Gansterer
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick R. Gansterer
Comment 1
2010-10-18 07:13:26 PDT
Created
attachment 71032
[details]
Patch
WebKit Commit Bot
Comment 2
2010-10-19 02:06:04 PDT
Comment on
attachment 71032
[details]
Patch Clearing flags on attachment: 71032 Committed
r70041
: <
http://trac.webkit.org/changeset/70041
>
WebKit Commit Bot
Comment 3
2010-10-19 02:06:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug