2010-10-19  Patrick Gansterer  <paroga@webkit.org>

Reviewed by Andreas Kling.

        Fix style of UnicodeWinCE
        https://bugs.webkit.org/show_bug.cgi?id=47818

        * wtf/unicode/wince/UnicodeWinCE.cpp:
        (WTF::Unicode::toLower):
        (WTF::Unicode::toUpper):
        * wtf/unicode/wince/UnicodeWinCE.h:

Canonical link: https://commits.webkit.org/60605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70041 268f45cc-cd09-0410-ab3c-d52691b4dbfc